# grafikaProjekt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: fragment.glsl  vertex.glsl
resources/meshes/: locations
resources/shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.h  Camera.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
src/ui/: EditorLayer.h  EditorUI.h  GeneralLayer.h  ObjectLayer.h
